# zipsa

./: .gitignore  BACKLOG.md  CLAUDE.md  README.md
launcher/: BACKLOG.md  CLAUDE.md  README.md  pyproject.toml  runtime-config.yaml.example
launcher/.agenthud/: config.yaml
launcher/docs/: research-notes-run-logging.md  run-logging.md
launcher/docs/specs/: 2026-05-04-run-logging-design.md
launcher/tests/: conftest.py  test_artifact_handler.py  test_builtin_skills.py  test_caller_context.py  test_claude_format_event_compact.py  test_cli.py  test_configure_command.py  test_create.py  test_create_command.py  test_create_server.py  test_dev_overlay.py  test_envelope.py  test_exec_command.py  test_exec_install_run.py  test_exec_runner.py  test_exec_skill.py  test_exec_skill_handler.py  test_exec_validate.py  test_executor.py  test_forge.py  test_forge_server.py  test_hitl_mcp.py  test_hitl_runner.py  test_host_served_container.py  test_install_health.py  test_installer.py  test_limits.py  test_memory_store.py  test_models.py  test_oauth.py  test_paths.py  test_phase_discovery.py  test_phase_runner.py  test_pretooluse_hook.py  test_pricing.py  test_promote_skill_handler.py  test_providers.py  test_pyproject.py  test_renderer.py  test_requires.py  (+18 more)
launcher/tests/auth/: test_browser.py  test_oauth.py  test_storage.py
launcher/tests/fixtures/manifests/: minimal.yaml  with-auth-provider.yaml  with-mcp.yaml
launcher/tests/fixtures/skills/: README.md
launcher/tests/fixtures/skills/artifact-echo/: manifest.yaml
launcher/tests/fixtures/skills/artifact-roundtrip/: manifest.yaml
launcher/tests/fixtures/skills/hitl-demo/: SKILL.md  manifest.yaml
launcher/tests/fixtures/skills/memory-isolation-demo/: SKILL.md  manifest.yaml
launcher/tests/fixtures/skills/memory-peek/: SKILL.md  manifest.yaml
launcher/tests/fixtures/skills/orchestrator-demo/: SKILL.md  manifest.yaml
launcher/tests/fixtures/skills/requires-demo/: SKILL.md  manifest.yaml
launcher/tests/fixtures/skills/test-parent/: SKILL.md  _install.json  manifest.yaml
launcher/tests/fixtures/skills/test-skill/: SKILL.md  manifest.yaml
launcher/tests/fixtures/skills/two-phase-fail/: SKILL.md  manifest.yaml
launcher/tests/fixtures/skills/voice-asker/: SKILL.md  manifest.yaml
launcher/zipsa/: __init__.py  __main__.py  cli.py  create.py  exec_runner.py  host_served_container.py  installer.py  paths.py  phase_runner.py  run_llm.py  runtime-contract.md  scheduling.py
launcher/zipsa/auth/: __init__.py  browser.py  oauth.py  providers.py  storage.py
launcher/zipsa/authoring/: AUTHORING.md  skill-builder.md
launcher/zipsa/builtin_skills/: __init__.py
launcher/zipsa/builtin_skills/skill-builder/: SKILL.md
launcher/zipsa/builtin_skills/skill-builder/zipsa-dist/: 1.clarify.md  2.iterate.md  3.finalize.py  (+2 more)
launcher/zipsa/core/: artifact_handler.py  caller_context.py  create_server.py  dev_overlay.py  envelope.py  exec_skill.py  exec_skill_handler.py  exec_validate.py  executor.py  forge_server.py  hitl_mcp.py  hitl_runner.py  install_health.py  limits.py  memory_store.py  models.py  output_parser.py  phase_allow.py  phase_discovery.py  phase_state.py  pricing.py  promote_skill_handler.py  prompts.py  pyproject.py  renderer.py  requires.py  resume.py  run_draft_handler.py  run_log_handler.py  run_script_handler.py  run_server.py  run_skill_handler.py  run_staging_skill_handler.py  skill.py  skill_catalog_handler.py  skill_files_handler.py  skill_validator_handler.py  summary.py
launcher/zipsa/hooks/: pretooluse.py
launcher/zipsa/runtimes/: __init__.py  base.py  claude.py
launcher/zipsa/system-prompts/: runtime-contract.md  system-prompt-template.md  user-message-template.md
skills/hello-world/zipsa-dist/: 1.report.py  instruction.md  manifest.yaml  pyproject.toml
web/: app.py  pyproject.toml
web/api/: runs.py  skills.py
web/tests/: test_runs_endpoint.py  test_skill_files_endpoint.py  test_skills_endpoint.py
web/ui/static/: style.css
web/ui/templates/: index.html  view_file.html
(+170 files in other folders)
