[project]
name = "skill-builder"
version = "0.2.0"
description = "Author a new zipsa skill interactively"
requires-python = ">=3.12"
dependencies = []

[tool.zipsa]
description = "Author a new zipsa skill interactively"

[tool.zipsa.limits]
max_cost_usd = 5.0
timeout_seconds = 3600

# Phase 1: intent clarification + catalog search.
[tool.zipsa.phases."1.clarify"]
max_turns = 15
allowed_tools = [
    "mcp__zipsa__ask",
    "mcp__zipsa__confirm",
    "mcp__zipsa__choose",
    "mcp__zipsa__list_skills_catalog",
]

# Phase 2: author + tryrun + review loop (single LLM session).
# Higher max_turns because of the round loop; cost_warn surfaces cumulative
# spend via HITL so the user can abort before hitting max_cost_usd.
[tool.zipsa.phases."2.iterate"]
max_turns = 80
cost_warn_threshold_usd = 0.5
allowed_tools = [
    "Read",
    "Write",
    "Glob",
    "Bash",
    "mcp__zipsa__ask",
    "mcp__zipsa__confirm",
    "mcp__zipsa__run_staging_skill",
    "mcp__zipsa__read_run_log",
]
